[metadata]
name = dazzler
version = attr: dazzler._version.__version__
author = Philippe Duval
author_email = t4rk@outlook.com
description = Async Web Framework
long_description = file: README.md
long_description_content_type = text/markdown
keywords = async, web, react, asyncio, aiohttp
license = MIT
url = https://github.com/T4rk1n/dazzler
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Session
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
packages = find:
include_package_data = true
install_requires =
    precept==0.6.5
    aiohttp==3.7.4.post0
    appdirs==1.4.4
    stringcase==1.2.0
    itsdangerous==2.0.1

[options.packages.find]
exclude =
    tests
    docs
    assets

[options.entry_points]
console_scripts =
    dazzler = dazzler._dazzler:cli
